[gd_scene load_steps=9 format=3 uid="uid://j3oks2xgkf20"]

[ext_resource type="Texture2D" uid="uid://c8r2yyp6cgxls" path="res://assets/tilesets/stand.png" id="1_c0l7i"]
[ext_resource type="Script" path="res://scripts/job_stand.gd" id="1_mwext"]
[ext_resource type="PackedScene" uid="uid://8ca8ag7ln4c3" path="res://interaction/interaction area/interaction_area.tscn" id="2_afxqt"]
[ext_resource type="Script" path="res://scripts/window.gd" id="4_1a2q5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfeey"]
size = Vector2(14, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmsuy"]
size = Vector2(47.5, 38)

[sub_resource type="Theme" id="Theme_r1o8e"]

[sub_resource type="ImageTexture" id="ImageTexture_devpk"]

[node name="JobStand" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_mwext")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -11)
texture = ExtResource("1_c0l7i")

[node name="World Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_xfeey")

[node name="InteractionArea" parent="." instance=ExtResource("2_afxqt")]
action_name = "get jobs"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_mmsuy")

[node name="Window" type="Window" parent="."]
initial_position = 2
size = Vector2i(1000, 1000)
theme = SubResource("Theme_r1o8e")
script = ExtResource("4_1a2q5")

[node name="Button" type="Button" parent="Window"]
offset_right = 8.0
offset_bottom = 8.0
text = "button"

[node name="Button2" type="Button" parent="Window"]
offset_left = 886.0
offset_top = 293.0
offset_right = 951.0
offset_bottom = 324.0
text = "button"
icon = SubResource("ImageTexture_devpk")

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Window/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Window/Button2" to="." method="_on_button_pressed"]
